--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^13.6.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
